Extend unused decl validation rule